--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="description" content="Personenverwaltung" />
-    <meta name="author" content="BBW RL" />
+    <meta name="author" content="Alex Severin" />
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" th:href="@{/bootstrap-4.1.3/css/bootstrap.min.css}"/>
@@ -18,7 +18,7 @@
                 <br/>
                 <h1>Personenverwaltung</h1>
             </div>
-            <div class="col-8">
+            <div class="col-1">
                <button>Beans</button>
             </div>
         </div>
