--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,14 +12,13 @@
     <link rel="stylesheet" th:href="@{/bootstrap-4.1.3/css/bootstrap.min.css}"/>
 </head>
 <body>
-    <div class="container">
+    <div class="container vh-100">
         <div class="row">
-            <div class="col-8">
-                <br/>
+            <div class="d-flex col-12 col-lg-8 justify-content-lg-start justify-content-center align-content-center">
                 <h1>Personenverwaltung</h1>
             </div>
-            <div class="col-1">
-               <button>Beans</button>
+            <div class="d-flex col-12 col-lg-4 justify-content-center align-items-center">
+               <button type="button" class="btn btn-primary">Add Person</button>
             </div>
         </div>
         <div th:each="person: ${persons}">
