--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,16 +14,37 @@
 <body>
     <div class="container vh-100">
         <div class="row">
-            <div class="d-flex col-12 col-lg-8 justify-content-lg-start justify-content-center align-content-center">
+            <div class="d-flex col-12 col-lg-9 justify-content-lg-start justify-content-center align-content-center">
                 <h1>Personenverwaltung</h1>
             </div>
-            <div class="d-flex col-12 col-lg-4 justify-content-center align-items-center">
+            <div class="d-flex col-12 col-lg-3 justify-content-center align-items-center justify-content-lg-end">
                <button type="button" class="btn btn-primary">Add Person</button>
             </div>
         </div>
-        <div th:each="person: ${persons}">
-            <p th:text="${person.id}"></p>
+        <div class="row mt-5">
+            <table class="table">
+                <thead>
+                <tr>
+                    <th scope="col">First</th>
+                    <th scope="col">Lastname</th>
+                    <th scope="col">Birthdate</th>
+                </tr>
+                </thead>
+                <tbody th:each="person: ${persons}">
+                    <tr>
+                        <th scope="row" th:text="${person.firstname}"></th>
+                        <td th:text="${person.lastname}"></td>
+                        <td th:text="${person.officialDate}"></td>
+                        <td>
+                            <form method="POST" th:action="@{delete/{personId} (personId=${person.id})}">
+                                <button class="btn btn-danger" type="submit">delete</button>
+                            </form>
+                        </td>
+                    </tr>
+                <div >
+            </div>
         </div>
+
 </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script th:src="@{/bootstrap-4.1.3/js/bootstrap.min.js}"></script>
