--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -14,6 +14,12 @@
 <body>
     <div class="container vh-100">
         <div class="row">
+            <div class="alert alert-success alert-dismissible fade show col-12" role="alert" th:text="${success}" th:if="${success}">
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+            <div class="alert alert-danger col-12" role="alert" th:text="${fail}" th:if="${fail}"></div>
             <div class="d-flex col-12 col-lg-9 justify-content-lg-start justify-content-center align-content-center">
                 <h1>Personenverwaltung</h1>
             </div>
@@ -36,7 +42,7 @@
                         <td th:text="${person.lastname}"></td>
                         <td th:text="${person.officialDate}"></td>
                         <td>
-                            <form method="POST" th:action="@{delete/{personId} (personId=${person.id})}">
+                            <form method="POST" th:action="@{delete/{personId} (personId=${person.id})}" onSubmit="return confirm('Do you really want to delete this person?');">
                                 <button class="btn btn-danger" type="submit">delete</button>
                             </form>
                         </td>
