--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -12,9 +12,22 @@
     <link rel="stylesheet" th:href="@{/bootstrap-4.1.3/css/bootstrap.min.css}"/>
 </head>
 <body>
+<script src="https://code.jquery.com/jquery-3.3.1.min.js"
+        integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+        crossorigin="anonymous"></script>
 <div class="container vh-100">
     <div class="row">
-        <div class="alert alert-success alert-dismissible fade show col-12" role="alert" th:text="${success}"
+        <script type="text/javascript">
+            $(document).ready(function () {
+                console.log("HELLOOOO")
+                $("#success-alert").fadeTo(2000, 500).slideUp(500, function () {
+                    console.log("HERE")
+                    $("#success-alert").slideUp(300);
+                });
+            });
+        </script>
+        <div class="alert alert-success alert-dismissible fade show col-12" id="success-alert" role="alert"
+             th:text="${success}"
              th:if="${success}">
             <button type="button" class="close" data-dismiss="alert" aria-label="Close">
                 <span aria-hidden="true">&times;</span>
@@ -25,7 +38,9 @@
             <h1>Personenverwaltung</h1>
         </div>
         <div class="d-flex col-12 col-lg-3 justify-content-center align-items-center justify-content-lg-end">
-            <button type="button" class="btn btn-primary">Add Person</button>
+            <a th:href="@{/form}">
+                <button type="button" class="btn btn-primary" th:href="@{/form}">Add Person</button>
+            </a>
         </div>
     </div>
     <div class="row mt-5">
@@ -56,7 +71,6 @@
     </div>
 </div>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 <script th:src="@{/bootstrap-4.1.3/js/bootstrap.min.js}"></script>
 </body>
 </html>
