--- a/src/main/resources/templates/add_person.html
+++ b/src/main/resources/templates/add_person.html
@@ -32,23 +32,20 @@
             <input type="text" class="form-control" id="lastname" placeholder="Lastname...">
         </div>
         <div class="form-check">
-            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1" checked>
+            <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="option1"
+                   checked>
             <label class="form-check-label" for="exampleRadios1">
                 female
             </label>
         </div>
-        <div class="form-check">
+        <div  class="form-check">
             <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="option2">
             <label class="form-check-label" for="exampleRadios2">
                 male
             </label>
         </div>
-        <div class="input-group date" data-provide="datepicker">
-            <input class="datepicker" data-date-format="mm/dd/yyyy">
-            <div class="input-group-addon">
-                <span class="glyphicon glyphicon-th"></span>
-            </div>
-        </div>
+        <div style="margin-bottom: 2.5%; "><br><label for="start">Start date</label><br>
+            <input style="border: 1px solid #ced4da; color: #495057; padding: 0.8%" type="date" id="start" name="trip-start"<br></div>
         <button type="submit" class="btn btn-primary">Submit</button>
     </form>
 </div>
