--- a/src/main/resources/templates/add_person.html
+++ b/src/main/resources/templates/add_person.html
@@ -23,35 +23,35 @@
                 <div class="form-group">
                     <label for="exampleInputEmail1">Email address</label>
                     <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                           placeholder="Enter email" th:field="*{email}">
+                           placeholder="Enter email" th:field="*{email}" required>
                     <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
                 </div>
                 <div class="form-group">
                     <label for="exampleInputPassword1">Firstname</label>
                     <input type="text" class="form-control" id="exampleInputPassword1" placeholder="Firstname..."
-                           th:field="*{firstname}">
+                           th:field="*{firstname}" required>
                 </div>
                 <div class="form-group">
                     <label for="lastname">Lastname</label>
-                    <input type="text" class="form-control" id="lastname" placeholder="Lastname..." th:field="*{lastname}">
+                    <input type="text" class="form-control" id="lastname" placeholder="Lastname..." th:field="*{lastname}" required>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="m"
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="f"
                            checked th:field="*{gender}">
                     <label class="form-check-label" for="exampleRadios1">
                         female
                     </label>
                 </div>
                 <div class="form-check">
-                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="f"
-                           th:field="*{gender}">
+                    <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="m"
+                           th:field="*{gender}" required>
                     <label class="form-check-label" for="exampleRadios2">
                         male
                     </label>
                 </div>
                 <div class="form-group">
                     <label for="birthdate">Birthdate</label>
-                    <input th:value="${person.birthdate}" th:field="*{birthdate}" id="birthdate" class="form-control" type="date" />
+                    <input required th:value="${person.birthdate}" th:field="*{birthdate}" id="birthdate" class="form-control" type="date" />
                 </div>
                 <button type="submit" class="btn btn-primary">Submit</button>
                 <script>
