--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,8 +10,50 @@
 
     <!-- Bootstrap core CSS -->
     <link rel="stylesheet" th:href="@{/bootstrap-4.1.3/css/bootstrap.min.css}"/>
+    <link rel="stylesheet" th:href="@{index.css}"/>
 </head>
+<style>
+    @media only screen and (max-width: 760px),
+    (min-device-width: 768px) and (max-device-width: 1024px) {
+
+        /* Force table to not be like tables anymore */
+        table, thead, tbody, th, td, tr {
+            display: block;
+        }
+
+        /* Hide table headers (but not display: none;, for accessibility) */
+        thead tr {
+            position: absolute;
+            top: -9999px;
+            left: -9999px;
+        }
+
+        tr {
+            border: 1px solid #ccc;
+        }
+
+        td {
+            /* Behave  like a "row" */
+            border: none;
+            border-bottom: 1px solid #eee;
+            position: relative;
+            padding-left: 50%;
+        }
+
+        td:before {
+            /* Now like a table header */
+            position: absolute;
+            /* Top/left values mimic padding */
+            top: 6px;
+            left: 6px;
+            width: 45%;
+            padding-right: 10px;
+            white-space: nowrap;
+        }
+    }
+</style>
 <body>
+
 <script src="https://code.jquery.com/jquery-3.3.1.min.js"
         integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
@@ -39,7 +81,7 @@
         </div>
         <div class="d-flex col-12 col-lg-3 justify-content-center align-items-center justify-content-lg-end">
             <a th:href="@{/form}">
-                <button type="button" class="btn btn-primary" th:href="@{/form}">Add Person</button>
+                <button type="button" class="btn btn-primary">Add Person</button>
             </a>
         </div>
     </div>
@@ -50,6 +92,8 @@
                 <th scope="col">First</th>
                 <th scope="col">Lastname</th>
                 <th scope="col">Birthdate</th>
+                <th scope="col">Email</th>
+                <th scope="col">Gender</th>
             </tr>
             </thead>
             <tbody th:each="person: ${persons}">
@@ -57,11 +101,18 @@
                 <th scope="row" th:text="${person.firstname}"></th>
                 <td th:text="${person.lastname}"></td>
                 <td th:text="${person.officialDate}"></td>
+                <td th:text="${person.email}"></td>
+                <td th:text="${person.gender}"></td>
                 <td>
                     <form method="POST" th:action="@{delete/{personId} (personId=${person.id})}"
                           onSubmit="return confirm('Do you really want to delete this person?');">
                         <button class="btn btn-danger" type="submit">delete</button>
                     </form>
+                </td>
+                <td>
+                    <a th:href="@{/editform/{id} (id=${person.id})}">
+                        <button class="btn btn-outline-primary">edit</button>
+                    </a>
                 </td>
             </tr>
             </tbody>
