--- a/src/main/resources/templates/edit_person.html
+++ b/src/main/resources/templates/edit_person.html
@@ -38,14 +38,14 @@
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios1" value="f"
-                           checked th:field="*{gender}" th:value="${person.gender}">
+                           checked th:field="*{gender}">
                     <label class="form-check-label" for="exampleRadios1">
                         female
                     </label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="radio" name="exampleRadios" id="exampleRadios2" value="m"
-                           th:field="*{gender}" required th:value="${person.gender}">
+                           th:field="*{gender}" required>
                     <label class="form-check-label" for="exampleRadios2">
                         male
                     </label>
